--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 /* Estilos para el modo claro */
 .light-mode {
   /* Aquí puedes definir los estilos para el modo claro */
