--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,3 +59,18 @@ footer {
   color: var(--nav-link-hover-color);
   background-color: var(--nav-link-hover-background);
 }
+
+@media (max-width: 578px) {
+  #product-container {
+    height: 480px;
+    overflow-y: scroll;
+  }
+}
+
+.fixed-bottom {
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f8f9fa;
+}
