--- a/view/cart.html
+++ b/view/cart.html
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./styles/styles.css" />
+  <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 
 <body class="light-mode">
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="ri-home-2-fill"></i> Inicio</a>
+            <a class="nav-link" href="../index.html"><i class="ri-home-2-fill"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
@@ -40,40 +40,34 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./view/cart.html" id="test"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
+            <a class="nav-link" href="#"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
           </li>
         </ul>
       </div>
       <button id="mode-toggle" class="btn ms-auto" aria-label="Cambiar modo">
-        <img src="./icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
+        <img src="../icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
       </button>
     </div>
   </nav>
 
   <!-- Contenido principal -->
   <main class="container mt-4">
-    <h1>Bienvenido a EasyShop</h1>
-    <p>
-      Explora nuestro catálogo y encuentra los productos que necesitas de
-      manera rápida y sencilla.
-    </p>
-    <div class="carousel">
-      <div><img src="https://picsum.photos/id/400/720/480" class="px-5" alt="Imágen 1"></div>
-      <div><img src="https://picsum.photos/id/410/720/480" class="px-5" alt="Imágen 2"></div>
-      <div><img src="https://picsum.photos/id/411/720/480" class="px-5" alt="Imágen 3"></div>
-      <div><img src="https://picsum.photos/id/412/720/480" class="px-5" alt="Imágen 4"></div>
-    </div>
-    <br><br>
+    <h1>Carrito</h1>
+    <p>Revisa los productos listos para tu compra</p>
 
     <section class="product-section">
-      <h2 class="text-center text-muted">Nuestros productos destacados</h2>
-      <hr>
       <div class="container">
         <div class="row" id="product-container"></div>
       </div>
     </section>
-    <br><br><br><br>
   </main>
+
+  <div class="fixed-bottom text-center py-3">
+    <button class="btn btn-large btn-success">Comprar <i class="ri-money-dollar-circle-fill"></i></button>
+    <button class="btn btn-large btn-danger">Limpiar <i class="ri-delete-bin-7-fill"></i></button>
+  </div>
+
+  <br><br><br>
 
   <!-- Pie de página -->
   <footer class="bg-light text-center py-3 light-mode dark-mode m-0">
@@ -89,8 +83,8 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Custom JS -->
-  <script type="module" src="./javascript/index.js"></script>
-  <script type="module" src="./javascript/darkmode.js"></script>
+  <script type="module" src="../javascript/cart.js"></script>
+  <script type="module" src="../javascript/darkmode.js"></script>
 </body>
 
 </html>
