--- a/view/catalogue.html
+++ b/view/catalogue.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -14,20 +14,20 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./styles/styles.css" />
-  <link rel="stylesheet" href="./styles/loader.css" />
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <link rel="stylesheet" href="../styles/loader.css" />
 </head>
 
 <body class="light-mode">
   <!-- Loader -->
   <div id="loader" class="loader">
     <div class="loader-spinner"></div>
-  </div>  
+  </div> 
 
   <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="./index.html">EasyShop</a>
+      <a class="navbar-brand" href="#">EasyShop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,51 +35,44 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a id="nav-home" class="nav-link" href="#"><i class="ri-home-2-fill"></i> Inicio</a>
+            <a class="nav-link" href="../index.html"><i class="ri-home-2-fill"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown">
-            <a id="nav-catalogue" class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="catalogue-list"></ul>
           </li>
           <li class="nav-item">
-            <a id="nav-cart" class="nav-link" href="./view/cart.html" id="test"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
+            <a class="nav-link" href="./cart.html" id="test"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
           </li>
         </ul>
       </div>
       <button id="mode-toggle" class="btn ms-auto" aria-label="Cambiar modo">
-        <img src="./icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
+        <img src="../icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
       </button>
     </div>
   </nav>
 
   <!-- Contenido principal -->
   <main class="container mt-4">
-    <h1 id="index-header">Bienvenido a EasyShop</h1>
-    <p id="index-description">
-      Explora nuestro catálogo y encuentra los productos que necesitas de
-      manera rápida y sencilla.
-    </p>
+    <h1 id="header">Placeholder</h1>
+    <p>Encuentra aquí los productos que necesites.</p>
     <div class="carousel">
-      <div><img src="https://picsum.photos/id/400/720/480" class="px-5" alt="Imágen 1"></div>
-      <div><img src="https://picsum.photos/id/410/720/480" class="px-5" alt="Imágen 2"></div>
-      <div><img src="https://picsum.photos/id/411/720/480" class="px-5" alt="Imágen 3"></div>
-      <div><img src="https://picsum.photos/id/412/720/480" class="px-5" alt="Imágen 4"></div>
     </div>
     <br><br>
-
+    <h2>Lista de productos</h2>
+    <hr>
     <section class="product-section">
-      <h2 id="index-featured" class="text-center text-muted">Nuestros productos destacados</h2>
-      <hr>
       <div class="container">
         <div class="row" id="product-container"></div>
       </div>
     </section>
-    <br><br><br><br>
   </main>
+
+  <br><br><br><br>
 
   <!-- Pie de página -->
   <footer class="bg-light text-center py-3 light-mode dark-mode m-0">
-    <p id="page-footer" class="m-0">© 2023 EasyShop. Todos los derechos reservados.</p>
+    <p class="m-0">© 2023 EasyShop. Todos los derechos reservados.</p>
   </footer>
 
   <!-- Enlace a los archivos JS -->
@@ -91,11 +84,10 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Custom JS -->
-  <script type="module" src="./javascript/index.js"></script>
-  <script type="module" src="./javascript/darkmode.js"></script>
-  <script type="module" src="./javascript/loader.js"></script>
-  <script type="module" src="./javascript/navbar.js"></script>
-  <script type="module" src="./javascript/localization.js"></script>
+  <script type="module" src="../javascript/catalogue.js"></script>
+  <script type="module" src="../javascript/darkmode.js"></script>
+  <script type="module" src="../javascript/loader.js"></script>
+  <script type="module" src="../javascript/navbar.js"></script>
 </body>
 
 </html>
