--- a/view/cart.html
+++ b/view/cart.html
@@ -25,9 +25,10 @@
   </div> 
 
   <!-- Barra de navegación -->
+  <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">EasyShop</a>
+      <a class="navbar-brand" href="../index.html">EasyShop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,20 +36,17 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html"><i class="ri-home-2-fill"></i> Inicio</a>
+            <a id="nav-home" class="nav-link" href="../index.html""><i class="ri-home-2-fill"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown"  id="catalogue-list"></ul>
+            <a id="nav-catalogue" class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="catalogue-list"></ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cart.html" id="test"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
+            <a id="nav-cart" class="nav-link" href="../view/cart.html" id="test"><i class="ri-shopping-cart-fill"> </i>Carrito</i></a>
           </li>
         </ul>
       </div>
-      <button id="mode-toggle" class="btn ms-auto" aria-label="Cambiar modo">
-        <img src="../icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
-      </button>
     </div>
   </nav>
 
