Retoques finales tras reunión con equipo

--- a/view/cart.html
+++ b/view/cart.html
@@ -64,8 +64,8 @@
 
   <div class="fixed-bottom text-center py-3 mt-5">
     <p id="total-label">Subtotal: $0</p>
-    <button class="btn btn-large btn-success" id="btnBuyCart">Comprar <i class="ri-money-dollar-circle-fill"></i></button>
-    <button class="btn btn-large btn-danger" id="btnDropCart">Limpiar <i class="ri-delete-bin-7-fill"></i></button>
+    <button class="btn btn-large btn-primary" id="btnBuyCart">Comprar <i class="ri-money-dollar-circle-fill"></i></button>
+    <button class="btn btn-large btn-dark" id="btnDropCart">Limpiar <i class="ri-delete-bin-7-fill"></i></button>
   </div>
 
   <br><br><br>
